--- a/css/demo.css
+++ b/css/demo.css
@@ -1,4 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800');
+
+input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {  }
+@-webkit-keyframes autofill {
+    to {
+        color: #666;
+        background: transparent;
+    }
+}
+
+input:-webkit-autofill {
+    -webkit-animation-name: autofill;
+    -webkit-animation-fill-mode: both;
+}
 body {
 	background-image: url(../images/blue-pattern.jpg);
 	background-position: top center;
@@ -8,7 +21,8 @@ body {
 	font-family: 'Open Sans', sans-serif;
 	color: #fff;
 }
-input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {    background-color: transparent !important;}
+
+
 .voltar-text-bg{	background-image: url(../images/voltartext.png);
 	background-position: top center;
 	background-repeat: no-repeat;
@@ -105,6 +119,8 @@ a:focus, a:hover {
     width: 33%;
 	padding-right:20px;
 }
+
+.custom-file-upload img{ cursor:pointer;}
 .custom-file-upload label {
   display: block;
   margin-bottom: 5px;
@@ -403,6 +419,11 @@ a.closed {
 	float: left;
     width: 100%;
 }
+.error { 
+    background-image: url(../images/errorbg.png) !important;
+	background-repeat:no-repeat;
+
+}
 .l-box label {
     font-size: 30px;
     color: #f9eb0e;
@@ -678,7 +699,7 @@ font-size: 35px;
 
 
 html .modal-backdrop {
-    background: url(../images/terms-con-bgimg.png) no-repeat bottom;
+    background:transparent;
 }
 html .modal-backdrop.in {
     opacity: .9;
@@ -829,6 +850,7 @@ html .terms-conditions .modal-content {
     line-height: 237px;
     text-align: center;
     padding-right: 45px;
+	    background-size: 100% 100%;
 }
 .fav-pop-btn {
     float: left;
@@ -848,6 +870,146 @@ html .terms-conditions .modal-content {
     float: left;
     width: 100%;
 }
+
+.chatpage .page-heading .head-line {
+    background-image: url(../images/chat-title.png);
+	    height: 128px;
+    max-width: 369px;
+}
+.chatpage .page-heading .head-line span {
+    margin-top: 7px;
+	font-size:72px;
+}
+.right-chat {
+    float: right;
+}
+.left-chat {
+    float: left;
+    margin-right: 8px;
+}
+body.chat-main {
+    background-image: url(../images/chat-bg.png);
+}
+.left-chat img{
+    box-shadow: 3px 1px 0px 3px #1b3769;
+    border-radius: 8px;
+    -ms-transform: rotate(-6deg);
+    -webkit-transform: rotate(-6deg);
+    transform: rotate(-6deg);
+    width: 130px;
+}
+
+.right-chat img{
+    box-shadow: 3px 1px 0px 3px #1b3769;
+    border-radius: 8px;
+    -ms-transform: rotate(6deg);
+    -webkit-transform: rotate(6deg);
+    transform: rotate(6deg);
+    width: 130px;
+}
+.chat-section {
+    float: left;
+    padding-top: 50px;
+    width: 100%;
+}
+.outbox{
+    float: left;
+    width: 100%;
+    padding-left: 42px;
+    background: url(../images/input-righ.png) no-repeat left bottom 35px;
+	    margin-bottom: 35px;
+}
+.outbox textarea {
+    width: 100%;
+    min-height: 175px;
+    border-radius: 10px;
+    border: none;
+    float: right;
+	    padding: 10px;
+    color: #000;
+}
+.inputbox {
+    float: left;
+    width: 100%;
+    padding-right: 38px;
+    background: url(../images/input-righ1.png) no-repeat right bottom 35px;
+    margin-bottom: 35px;
+		
+}
+.inputbox textarea {
+    width: 100%;
+    min-height: 147px;
+    border-radius: 10px;
+    border: none;
+    float: right;
+    background: #d7ffff;
+	    padding: 10px;
+    color: #000;
+}
+.chat-section .volterbox button {
+    height: 101px;
+    max-width: 282px;
+
+}
+
+.bankstars .page-heading .head-line {
+    background-image: url(../images/bank-star-title.png);
+    height: 151px;
+    max-width: 436px;
+    text-align: center;
+}
+.bankstars .page-heading .head-line span {
+    font-size: 50px;
+}	
+.bankof-ul h1 {
+    font-size: 37px;
+    font-weight: 700;
+    color: #fff7e8;
+}
+.bankof-ul h1, .bankof-ul li {
+    font-size: 37px;
+    font-weight: 700;
+    color: #fff7e8;
+    list-style: none;
+	padding: 15px 0px;
+}
+ul.bankof-ul {
+    padding: 0px;
+}
+ul.bankof-ul span {
+    color: #fffc00;
+	padding-left: 10px;
+}
+.bankof-ul li {
+    border-top: 1px solid #4e6783;
+}
+.desktop-verify p {
+    font-size: 28px;
+    font-weight: 700;
+    margin-top: 50px;
+    text-align: center;
+    width: 100%;
+    padding: 0px 30px;
+}
+.forgot-link {
+    text-align: center;
+ 
+}
+.forgot-link a {
+    color: #fff;
+    font-size: 20px;
+    text-decoration: underline;
+    /* float: left; */
+}
+
+div#myModa7, div#myModa6 {
+    background-image: url(../images/blue-pattern.jpg);
+
+}
+div#myModa2 {
+    background-image: url(../images/terms-con-bgimg.png);
+}
+
 /**innerpage css end here**/
 
 
@@ -855,7 +1017,25 @@ html .terms-conditions .modal-content {
 
 /**Responsive css start here**/
 
+
+@media only screen and (max-width:664px) {
+.inputbox{ margin-bottom:15px;}
+.outbox textarea, .inputbox textarea{    min-height: 110px;}
+.left-chat {  width: 20%;}
+.chatpage .page-heading .head-line {    height: 111px;    max-width: 54%;	    padding: 0px;}
+.chatpage .page-heading .head-line span{ font-size:52px; line-height:normal;}
+.right-chat {   float: right;    width: 20%;}
+.chat-section { padding-top: 0;}
+
+.chatpage .header {    float: left;    width: 100%;   padding-bottom: 20px;}
+}
 @media only screen and (max-width:640px) {
+	
+
+
+
+
+	
 .ranking-top-div.r-scnd {  margin-left: 10px;}
 .rankingbtm-section .rank {   font-size: 15px;    line-height: 16px;   float: left;   padding: 0px; padding-left: 3px; width: 15%;}
 .rank img {   width: 10px;}
@@ -952,7 +1132,18 @@ html .terms-conditions .modal-content {
 }
 }
 
+@media only screen and (max-width:585px) {
+  	.bankof-ul h1, .bankof-ul li {   font-size: 25px;   padding: 8px 0px;}
+.bankstars .page-heading .head-line{    max-width: 255px; height: 89px;     padding-top: 0px;}
+.bankstars .page-heading .head-line span {    font-size: 27px;  margin-top: 20px;  line-height: normal;}
+
+.fav-title {    font-size: 26px;  height: 130px;    line-height: normal;   padding: 47px 50px;}
+.fav-pop-btn a {  margin: 0px 7px;   width: 44px;}
+.fav-pop-btn {   margin-top: -28px;}
+}
 @media only screen and (max-width:570px) {
+	
+.chatpage .page-heading .head-line span{ font-size:37px; line-height:normal;}	
 .terms-text {   font-size: 17px;   margin: 20px 0px;}
 .terms-conditions .loginpage .page-heading .head-line span {   font-size: 22px;padding-top: 14px; line-height:normal;}
 .terms-conditions .page-heading .head-line {  max-width: 320px;      height: 121px; width: 100%;} 
@@ -1024,6 +1215,12 @@ html .terms-conditions .modal-content {
 }
 }
  @media only screen and (max-width:480px) {
+.fav-title {    font-size: 17px;  height: 130px;    line-height: normal;   padding: 47px 50px;}
+.fav-pop-btn a {  margin: 0px 7px;   width: 44px;}
+.fav-pop-btn {   margin-top: -28px;}
+
+
+.chatpage .header {    float: left;    width: 100%;   padding-bottom: 0px;}	 
 	 
 .forgot-pass-ok p {
 
@@ -1078,9 +1275,14 @@ a.closed {
 .volterbox button span {
 font-size: 30px;
 }
+
+
+
 }
 @media only screen and (min-width:320px) and (max-width: 399px) {
-
+	.bankof-ul h1, .bankof-ul li {   font-size: 17px;   padding: 8px 0px;}
+.bankstars .page-heading .head-line{    max-width: 181px; height: 89px;     padding-top: 0px;}
+.bankstars .page-heading .head-line span { font-size: 24px;     margin-top: 11px; line-height:normal;}
 	
 .ranking-main-div .volterbox button {   height: 58px; max-width: 165px;}
 .ranking-main-div .volterbox button span {   font-size: 22px;}
@@ -1114,9 +1316,10 @@ font-size: 30px;
 }
 
 
-
-
-
+.chatpage .page-heading .head-line span{ font-size:25px; line-height:normal;}
+.outbox textarea, .inputbox textarea{    min-height: 80px;}
+.outbox {padding-left: 26px;}
+.inputbox {padding-right: 26px;}
 
 
 
