--- a/css/style.css
+++ b/css/style.css
@@ -1001,7 +1001,7 @@ margin-right:-40px;
 .edi-fav {top: 17px; font-size: 12px; right: 13px;}	
 .edit-up {  right: 35px; top: 18px;  width: 35px;}
 a.edit-n { top: 17px; width: 17px; right: 50px;}
-a.edit-n1 { right: 60px; bottom: 0;  width: 14px;}
+a.edit-n1 { right: 59px; bottom: -5px;  width: 14px;}
 .ageclm-left a img, .ageclm-right a img { width: 13px;}
 
 
