--- a/css/demo.css
+++ b/css/demo.css
@@ -1336,8 +1336,11 @@ font-size: 30px;
 
 }
 
-@media only screen and (min-width:288px) and (max-width: 319px) {
+@media only screen and (min-width:270px) and (max-width: 319px) {
+body .l-box.confm input {
+    width: 27%;
+}	
 .l-box input {    width: 65%;}
-.l-box.confm input {    width: 37%;}
-.rdio {    font-size: 14px;}
+
+.rdio {    font-size: 12px;}
 }
