--- a/css/demo.css
+++ b/css/demo.css
@@ -1336,11 +1336,14 @@ font-size: 30px;
 
 }
 
-@media only screen and (min-width:270px) and (max-width: 319px) {
+@media only screen and (min-width:270px) and (max-width: 360px) {
 body .l-box.confm input {
     width: 27%;
 }	
 .l-box input {    width: 65%;}
 
 .rdio {    font-size: 12px;}
+.container {
+    padding: 0 8px;
+}
 }
