--- a/css/demo.css
+++ b/css/demo.css
@@ -3,7 +3,7 @@
 input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {  }
 @-webkit-keyframes autofill {
     to {
-        color: #666;
+        color: #fff;
         background: transparent;
     }
 }
@@ -68,6 +68,8 @@ body {
     text-shadow: 0px 3px 25px #fff;
 
 }
+
+nav#c-menu--slide-right{ top:20px;}
 .voltr-btn span {
     padding-top: 82px;
     float: left;
@@ -487,10 +489,10 @@ a.closed {
     background-repeat: no-repeat;
     background-size: 30px;
     background-size: 7%;
-    background-position: 94%;
+    background-position: 95%;
 	outline:none;
 }
-.error1{ float:left; width:100%; color:red;}
+.error1{ float:left; width:100%; color:red; text-align:center;}
 .l-box button img {
     float: right;
     padding-right: 38px;
