--- a/css/demo.css
+++ b/css/demo.css
@@ -1233,6 +1233,12 @@ div#myModa2 {
 }
 }
  @media only screen and (max-width:480px) {
+.loginbox {
+    margin-top: 0px;
+}
+body .modal-dialog.frgtpwd {
+    margin: 0px;
+}	 
 .forgot-pass-ok p {
     font-size: 19px;
     font-weight: 600;
