--- a/css/demo.css
+++ b/css/demo.css
@@ -22,7 +22,13 @@ body {
 	color: #fff;
 }
 
-
+.editaccountms .custom-file-upload img {
+    border-radius: 19px;
+    border: 3px solid #1cbac6;
+    box-shadow: 0px 11px 8px #000;
+    height: 170px;
+    width: 100%;
+}
 .voltar-text-bg{	background-image: url(../images/voltartext.png);
 	background-position: top center;
 	background-repeat: no-repeat;
@@ -1233,6 +1239,10 @@ div#myModa2 {
 }
 }
  @media only screen and (max-width:480px) {
+.custom-file-upload img {
+    border-radius: 10px;
+    height: 100px;
+}	 
 .loginbox {
     margin-top: 0px;
 }
@@ -1308,6 +1318,7 @@ font-size: 30px;
 
 }
 @media only screen and (min-width:320px) and (max-width: 399px) {
+		
 	.bankof-ul h1, .bankof-ul li {   font-size: 17px;   padding: 8px 0px;}
 .bankstars .page-heading .head-line{    max-width: 181px; height: 89px;     padding-top: 0px;}
 .bankstars .page-heading .head-line span { font-size: 24px;     margin-top: 11px; line-height:normal;}
