--- a/css/demo.css
+++ b/css/demo.css
@@ -1027,6 +1027,12 @@ div#myModa2 {
     margin-bottom: 30px;
 }
 
+.modal-body {
+    padding-top: 0;
+}
+header.header {
+    padding-top: 0;
+}
 /**innerpage css end here**/
 
 
@@ -1239,7 +1245,7 @@ div#myModa2 {
 }
 }
  @media only screen and (max-width:480px) {
-.custom-file-upload img {
+.editaccountms .custom-file-upload img {
     border-radius: 10px;
     height: 100px;
 }	 
