--- a/css/demo.css
+++ b/css/demo.css
@@ -305,6 +305,7 @@ a:focus, a:hover {
 	margin: 0px 11px;
 	margin-bottom: 30px;
 	position: relative;
+	vertical-align:top;
 }
 .fav-prof .img-box {    
     background-repeat: no-repeat;
@@ -1076,7 +1077,7 @@ header.header {
 }
 .fav-prof .img-box {
 	border-radius: 4px;
-	height: auto;
+	height: 134px;
 	box-shadow: 0px -1px 0px 2px #fff;
 }
 .username {
@@ -1203,7 +1204,7 @@ header.header {
 .favrouitepage .page-heading .head-line{margin-right: 82px;}
 .fav-prof .img-box {
 	border-radius: 4px;
-	height: auto;
+	height: 100px;
 	box-shadow: 0px -1px 0px 2px #fff;
 }
 .fav-prof li {
@@ -1224,7 +1225,7 @@ header.header {
 }
 .fav-prof .img-box {
 	border-radius: 4px;
-	height: auto;
+	height: 100px;
 	box-shadow: 0px -1px 0px 2px #fff;
 }
 .fav-prof li {
@@ -1348,13 +1349,12 @@ font-size: 30px;
 }
 .fav-prof .img-box {
 	border-radius: 4px;
-	height: auto;
+	height: 80px;
 	box-shadow: 0px -1px 0px 2px #fff;
 }
 .username {
-	font-size: 15px;
-}
-
+	font-size: 12px;
+}	
 
 .chatpage .page-heading .head-line span{ font-size:25px; line-height:normal;}
 .outbox textarea, .inputbox textarea{    min-height: 80px;}
@@ -1366,6 +1366,9 @@ font-size: 30px;
 }
 
 @media only screen and (min-width:320px) and (max-width: 360px) {
+.username {
+	font-size: 12px;
+}	
 body .l-box.confm input {
     width: 30%;
 }	
