--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,80 @@ padding:0 15px;
 a {
     color: #fff;
 }
+
+div#myModal13 {
+    background-image: url(../images/voltarbg.png);
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    font-family: 'Open Sans', sans-serif;
+    color: #fff;
+}
+.voltar-text-bg{	background-image: url(../images/voltartext.png);
+	background-position: top center;
+	background-repeat: no-repeat;
+	font-family: 'Open Sans', sans-serif;
+	color: #fff;
+	max-width:597px;
+	height:638px;
+	    margin-top: 100px;
+		text-align:center;
+		    margin: 0 auto;
+			    background-size: 100%;
+}
+.voltr-btn{    background-image: url(../images/vlt-btn.png);
+    background-position: top center;
+    background-repeat: no-repeat;
+    font-family: 'Open Sans', sans-serif;
+    color: #fff;
+    max-width: 393px;
+    height: 261px;
+    margin-top: 0;
+    text-align: center;
+    display: inline-block;
+    width: 100%;
+    font-size: 43px;
+    font-weight: 700;
+    vertical-align: middle;
+    margin-top: -90px;
+	background-size: 100%;
+	cursor:pointer;
+}
+.voltar-page {
+    text-align: center;
+	
+}
+.vt-text {
+    width: 67%;
+    font-weight: 700;
+    font-size: 43px;
+    display: inline-block;
+    float: none;
+    padding-top: 159px;
+    line-height: 52px;
+    text-shadow: 0px 3px 25px #fff;
+
+}
+
+.voltr-btn span {
+    padding-top: 82px;
+    float: left;
+    text-align: left;
+    width: 100%;
+    padding-left: 66px;
+}
+body.voltarpage {
+	background-image: url(../images/voltarbg.png);
+	background-position: top center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+	font-family: 'Open Sans', sans-serif;
+	color: #fff;
+}
+
+
 .hrt-box {
     position: absolute;
     right: 0;
@@ -71,12 +145,13 @@ a {
 .edi-fav {
     position: absolute;
     right: 0;
-    top: 10%;
+    top: 11%;
     font-size: 22px;
-    right: 6%;
+    right: 4%;
     color: #7b1320;
     font-weight: 800;
     text-shadow: 4px 1px 5px #fff;
+    width: 13%;
 }
 a.edit-n {
     float: right;
@@ -101,17 +176,19 @@ a.edit-n1 {
 .header{ text-align:center; padding-top:30px;}
 
 .header .rating-wrap{
-width:253px;
-height:85px;
-background-image:url(../images/top-rating-bg.png);
-background-repeat:no-repeat;
-display:inline-block;
-vertical-align:top;
-font-size:30px;
-color:#fff;
-font-weight:700;
-padding-top:18px;
-background-size:100%;
+    width: 191px;
+    height: 82px;
+    background-image: url(../images/top-rating-bg.png);
+    background-repeat: no-repeat;
+    display: inline-block;
+    vertical-align: top;
+    font-size: 30px;
+    color: #fff;
+    font-weight: 700;
+    padding-top: 18px;
+    background-size: 100%;
+    text-align: center;
+    padding-left: 18px;
 }
 
 .level-wrap{
@@ -320,7 +397,7 @@ margin:auto;
 margin-top:55px;
 position:relative;
 min-height:200px;
-z-index:999;
+z-index:99;
 }
 
 .stars-mainwrap a{ cursor:pointer; z-index:9999;}
@@ -604,7 +681,7 @@ a.edit-n1 { right: 103px; bottom: -10px;  width: 23px;}
 max-width:470px;
 }
 .header .rating-wrap{
-width:170px;
+width:124px;
 height:53px;
 font-size:18px;
 padding-top:15px;	
@@ -790,10 +867,10 @@ a.edit-n1 { right: 60px; bottom: 0;  width: 14px;}
 max-width:350px;
 }
 .header .rating-wrap{
-width:125px;
+width:106px;
 height:43px;
 font-size:15px;
-padding-top:8px;	
+padding-top:12px;	
 }
 .level-wrap{
 width:62px;
@@ -904,6 +981,21 @@ margin-right:-30px;
 
 
 @media only screen and (min-width:480px) and (max-width: 600px){
+
+.voltr-btn span {  padding-top: 53px;
+    padding-left: 29px;
+    font-size: 30px;}
+.voltr-btn {      max-width: 248px;
+    height: 168px;}
+.vt-text {      font-size: 28px;
+    padding-top: 99px;
+    line-height: 44px;}	
+.voltar-text-bg {
+    height: 466px;
+    width: 410px;
+}
+
+	
 .whtsupbox1 .fav-title {    font-size: 19px;
     height: 124px;
     padding: 43px 66px;}
@@ -938,6 +1030,28 @@ margin-right:-30px;
 
 
 @media only screen and (min-width:320px) and (max-width: 480px){
+.voltr-btn span {  padding-top: 44px;   padding-left: 29px;   font-size: 22px;}
+.voltr-btn {   max-width: 200px;   height: 127px;}
+.vt-text {  font-size: 20px;   padding-top: 71px;	    line-height: 32px;}	
+.voltar-text-bg{    height: 352px; width: 292px;}
+
+	 
+.volterbox button {
+	height: 70px;
+	max-width: 205px;
+	font-size: 34px;
+}
+.volterbox {
+	margin-top: 19px;
+}
+a.closed {
+	width: 10px;
+}
+.volterbox button span {
+font-size: 30px;
+}
+
+	
 .no-profile-display .header .menu-wrap {
     width: 184px;
    height: 81px;
@@ -971,10 +1085,10 @@ margin-right:-30px;
 max-width:400px;
 }
 .header .rating-wrap{
-width:145px;
+width:122px;
 height:50px;
 font-size:17px;
-padding-top:10px;	
+padding-top:15px;	
 }
 .level-wrap{
 width:70px;
@@ -1070,10 +1184,10 @@ a.edit-n1 { right: 59px; bottom: -5px;  width: 14px;}
 max-width:320px;
 }
 .header .rating-wrap{
-width:120px;
+width:104px;
 height:43px;
 font-size:14px;
-padding-top:8px;	
+padding-top:11px;
 }
 .level-wrap{
 width:58px;
