--- a/css/demo.css
+++ b/css/demo.css
@@ -21,7 +21,12 @@ body {
 	font-family: 'Open Sans', sans-serif;
 	color: #fff;
 }
-
+body .rnk-page {
+    padding-top: 50px;
+}
+body .favrouitepage {
+    padding-top: 50px;
+}
 .editaccountms .custom-file-upload img {
     border-radius: 19px;
     border: 3px solid #1cbac6;
@@ -277,11 +282,10 @@ a:focus, a:hover {
 	    margin-top: 25px;
 }
 .ranking-top-div .rank {
-    float: NONE;
+    float: left;
     font-size: 50px;
     font-weight: 600;
     margin-top: 0;
-    display: inline-block;
     padding: 0px 5px;
     vertical-align: top;
     line-height: 51px;
@@ -398,11 +402,14 @@ a.closed {
 	vertical-align:top;
 	cursor:pointer;
 }
-
+body .regt {
+    padding-top: 30px;
+}
 
 .loginpage .page-heading .head-line span {
 	font-size: 64px;
 	margin-top: 44px;
+	letter-spacing:2px;
 		
 }
 .loginpage .page-heading .head-line {
@@ -511,7 +518,7 @@ a.closed {
 .ranking-top-div {
     border: 1px solid #6a8cab;
     float: none;
-    width: auto;
+    max-width: 478px;
     border-radius: 25px;
     padding: 10px;
     box-sizing: border-box;
@@ -519,7 +526,8 @@ a.closed {
     margin-top: 15px;
     display: inline-block;
     position: relative;
-    padding: 22px 43px;
+    padding: 22px 20px 22px 43px;
+	width:100%;
 }
 .rank {
 float: NONE;
@@ -545,14 +553,15 @@ float: NONE;
     margin: 0;
 }
 .rank-title {
-    float: none;
-    font-size: 31px;
+    float: left;
+    font-size: 26px;
     font-weight: 700;
     padding-left: 10px;
     padding-top: 0px;
     display: inline-block;
     vertical-align: top;
-	text-align:left;
+    text-align: left;
+    width: 61%;
 	
 }
 .ranking-top-div a.closed {
@@ -570,7 +579,7 @@ float: NONE;
     border-radius: 20px;
     float: left;
     width: 48%;
-    padding: 10px 0px;
+    padding: 10px 10px;
 
 }
 .ranking-top-div.r-scnd {
@@ -580,10 +589,12 @@ float: NONE;
     margin-left: 20px;
 }
 .rankingbtm-section .rank-title {
-    font-size: 24px;
+    font-size: 22px;
     padding-left: 13px;
     line-height: normal;
     vertical-align: top;
+	    float: left;
+    width: 63%;
 }
 .rankingbtm-section .rank-title img {
     width: 34px;
@@ -614,10 +625,26 @@ font-size: 35px;
 .ranking-page .innercontent {
     padding-bottom: 0px;
 }
-
+.r-top-only .ranking-person img{ width:100%; height:100%;     border-radius: 10px;}
 .ranking-person {
-    display: inline-block;
+	float:left;
     vertical-align: text-bottom;
+}
+.rankingbtm-section .ranking-person {
+    width: 70px;
+    height: 75px;
+	background:#fff;
+}
+.rankingbtm-section .ranking-person img {
+    height: 100%;
+    width: 100%;
+	    border-radius: 7px;
+}
+.r-top-only .ranking-person {
+    width: 25%;
+    height: 105px;
+	background:#fff;
+	border-radius:10px;
 }
 
 .ranking-main-div {
@@ -1050,18 +1077,16 @@ header.header {
 }
 @media only screen and (max-width:640px) {
 	
-
-
-
-
-	
+.rankingbtm-section .rank-title {
+    width: 62%;
+}	
 .ranking-top-div.r-scnd {  margin-left: 10px;}
 .rankingbtm-section .rank {   font-size: 15px;    line-height: 16px;   float: left;   padding: 0px; padding-left: 3px; width: 15%;}
 .rank img {   width: 10px;}
 .rankingbtm-section .ranking-person{ float:left;}	
 .rankingbtm-section .rank-title img {   width: 14px;}
 .rankingbtm-section .rank-title {   font-size: 17px; padding:0px;}	
-.rankingbtm-section .ranking-person {   width: 21%;}
+.rankingbtm-section .ranking-person {   width: 21%;     margin-right: 5px;}
 .rankingbtm-section .ranking-top-div{ border-radius:6px;}
 .rankingbtm-section .ranking-top-div .rank { font-size: 21px; padding: 0px 5px;line-height: 24px;}	
 
@@ -1107,7 +1132,12 @@ header.header {
 }
 }
 @media only screen and (max-width:600px) {
+
 	
+.rankingbtm-section .rank-title {
+    width: 61%;
+}
+
 .selectbox .selectboxit-container .selectboxit-text {   height: 51px;   line-height: 54px;        font-size: 16px;
     font-weight: 600;
     font-family: 'Open Sans', sans-serif;}
@@ -1178,11 +1208,11 @@ header.header {
 .ranking-page .page-heading .head-line {    height: 124px;    width: 320px; padding-top:19px;}
 .ranking-page .page-heading .head-line span {   margin-right: 62px; font-size: 34px; margin-top: 0px; line-height:normal;}
 	
-.ranking-top-div {   border: 1px solid #6a8cab; border-radius: 12px; text-align: center; margin-top: 9px; padding: 10px 16px;}
-.trophy { left: -24px; top: 10px; width: 54px;/* margin-right: 10px; */}
-.ranking-top-div .rank {   font-size: 31px;  margin-top: 0; padding: 0px 5px; line-height: 28px;  text-align: left;}
+.ranking-top-div {   border: 1px solid #6a8cab; border-radius: 12px; text-align: center; margin-top: 9px; padding: 10px 7px 10px 23px;}
+.trophy { left: -12px; top: 10px; width: 50px;/* margin-right: 10px; */}
+.ranking-top-div .rank {   font-size: 24px;  margin-top: 0; padding: 0px 5px; line-height: 28px;  text-align: left;}
 .ranking-person {   width: 23%;}
-.rank-title {   font-size: 20px; padding-left: 10px; padding-top: 0px;text-align: left;}
+.rank-title {   font-size: 17px; padding-left: 10px; padding-top: 0px;text-align: left;}
 .rank-title img {   width: 29px;}
 
 
@@ -1241,6 +1271,18 @@ header.header {
 }
 }
  @media only screen and (max-width:480px) {
+.rank-title {
+    width: 59%;
+}
+.r-top-only .ranking-person {
+    width: 21%;
+    height: 59px;
+	border-radius:10px;
+}
+.rankingbtm-section .ranking-top-div {
+    padding: 1px;
+}
+	 
 .editaccountms .custom-file-upload img {
     border-radius: 10px;
     height: 100px;
@@ -1273,15 +1315,20 @@ body .modal-dialog.frgtpwd {
 .ranking-page .page-heading .head-line span {   margin-right: 62px; font-size: 34px; margin-top: 0px; line-height:normal;}
 	 
 .ranking-top-div.r-scnd {  margin-left: 10px;}
-.rankingbtm-section .rank {   font-size: 15px;    line-height: 16px;   float: left;   padding: 0px; padding-left: 3px; width: 15%;}
-.rank img {   width: 10px;}
+.rankingbtm-section .rank {   font-size: 15px;    line-height: 16px;   float: left;   padding: 0px; padding-left: 3px; width: 13%;}
+.rank img {   width: 7px;}
 .rankingbtm-section .ranking-person{ float:left;}	
 .rankingbtm-section .rank-title img {   width: 14px;}
-.rankingbtm-section .rank-title {   font-size: 12px; padding:0px;}	
-.rankingbtm-section .ranking-person {   width: 17%;}
-.rankingbtm-section .ranking-top-div{ border-radius:6px;}
-.rankingbtm-section .ranking-top-div .rank { font-size: 15px; padding: 0px 5px;line-height: 17px;}	 
-
+.rankingbtm-section .rank-title {       font-size: 12px;
+    padding: 0px;
+    padding-left: 5px;
+    font-weight: 500;}	
+.rankingbtm-section .ranking-person {   width: 17%; height: 27px;     margin-right: 2px;     border-radius: 2px;}
+.rankingbtm-section .ranking-top-div{ border-radius:3px;}
+.rankingbtm-section .ranking-top-div .rank { font-size: 12px; padding: 0px 5px;line-height: 17px;}	 
+.rankingbtm-section .ranking-person img {
+    border-radius: 2px;
+}
 
 
 
