--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,12 @@ padding:0 15px;
 a {
     color: #fff;
 }
-
+body {
+    padding-top: 40px;
+}
+.modal-content {
+    padding-top: 30px;
+}
 div#myModal13 {
     background-image: url(../images/voltarbg.png);
     background-position: top center;
