--- a/css/demo.css
+++ b/css/demo.css
@@ -21,6 +21,7 @@ body {
 	font-family: 'Open Sans', sans-serif;
 	color: #fff;
 }
+
 body .rnk-page {
     padding-top: 50px;
 }
@@ -29,10 +30,13 @@ body .favrouitepage {
 }
 
 body {
-    padding-top: 40px;
+    padding-top: 30px;
 }
 .modal-content {
     padding-top: 30px;
+}
+.c-menu--slide-right, .c-menu--push-right {
+    top: 23px;
 }
 .editaccountms .custom-file-upload img {
     border-radius: 19px;
