--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,16 @@ padding:0 15px;
 a {
     color: #fff;
 }
+
 body {
-    padding-top: 40px;
+    padding-top: 30px;
 }
+
 .modal-content {
     padding-top: 30px;
+}
+.c-menu--slide-right, .c-menu--push-right {
+    top: 23px;
 }
 div#myModal13 {
     background-image: url(../images/voltarbg.png);
