--- a/css/demo.css
+++ b/css/demo.css
@@ -1332,6 +1332,10 @@ body .modal-dialog.frgtpwd {
     padding: 0px;
     padding-left: 5px;
     font-weight: 500;}	
+	.row_repeat {
+    float: left;
+    width: 100%;
+}
 .rankingbtm-section .ranking-person {   width: 17%; height: 27px;     margin-right: 2px;     border-radius: 2px;}
 .rankingbtm-section .ranking-top-div{ border-radius:3px;}
 .rankingbtm-section .ranking-top-div .rank { font-size: 12px; padding: 0px 5px;line-height: 17px;}	 
