--- a/css/demo.css
+++ b/css/demo.css
@@ -525,7 +525,6 @@ body .regt {
     height: 160px;
 }
 .ranking-top-div {
-    border: 1px solid #6a8cab;
     float: none;
     max-width: 478px;
     border-radius: 25px;
@@ -535,7 +534,7 @@ body .regt {
     margin-top: 15px;
     display: inline-block;
     position: relative;
-    padding: 22px 20px 22px 43px;
+    padding: 8px 20px 0px 43px;
 	width:100%;
 }
 .rank {
@@ -1217,7 +1216,7 @@ header.header {
 .ranking-page .page-heading .head-line {    height: 124px;    width: 320px; padding-top:19px;}
 .ranking-page .page-heading .head-line span {   margin-right: 62px; font-size: 34px; margin-top: 0px; line-height:normal;}
 	
-.ranking-top-div {   border: 1px solid #6a8cab; border-radius: 12px; text-align: center; margin-top: 9px; padding: 10px 7px 10px 23px;}
+.ranking-top-div {    border-radius: 12px; text-align: center; margin-top: 9px; }
 .trophy { left: -12px; top: 10px; width: 50px;/* margin-right: 10px; */}
 .ranking-top-div .rank {   font-size: 24px;  margin-top: 0; padding: 0px 5px; line-height: 28px;  text-align: left;}
 .ranking-person {   width: 23%;}
@@ -1230,6 +1229,14 @@ header.header {
 .loginpage .page-heading .head-line span {    font-size: 50px; margin-top: 0px;}
 }
  @media only screen and (min-width:481px) and (max-width: 570px) {
+	body .favrouitepage .page-heading .head-line{    padding: 19px 0px 0px 33px;
+    max-width: 362px; margin-right:0px;}
+.favrouitepage .page-heading .head-line span {
+    font-size: 44px;
+    line-height: 70px;
+    margin-top: 0;
+}
+ 
 .page-heading .head-line {
 	padding: 19px 0px 0px 0px;
 	height: 158px;
@@ -1252,15 +1259,18 @@ header.header {
 }
  @media only screen and (min-width:400px) and (max-width: 480px) {
  
-.page-heading .head-line {
+.favrouitepage .page-heading .head-line {
 	padding: 19px 0px 0px 0px;
 	height: 158px;
+	
 }
-.favrouitepage .page-heading .head-line{padding:  19px 0px 0px 33px;}
+
+.favrouitepage .page-heading .head-line{    padding: 19px 0px 0px 33px;
+    max-width: 300px;}
 .page-heading .head-line span {
-	font-size: 45px;
-	line-height: 79px;
-	margin-top: 0;
+    font-size: 39px;
+    line-height: 50px;
+    margin-top: 0;
 }
 .fav-prof .img-box {
 	border-radius: 4px;
@@ -1370,7 +1380,7 @@ body .modal-dialog.frgtpwd {
 	margin-top: 19px;
 }
 a.closed {
-	width: 10px;
+	width: 18px;
 }
 .volterbox button span {
 font-size: 30px;
@@ -1400,11 +1410,11 @@ font-size: 30px;
 .page-heading .head-line {
 	padding: 19px 0px 0px 0px;
 	height: 96px;
-	width: 257px;
+	width: 228px;
 }
 .favrouitepage .page-heading .head-line{padding: 19px 0px 0px 42px;}
 .page-heading .head-line span {
-	font-size: 29px;
+	font-size: 23px;
 	margin-top: 0;
 }
 .fav-prof .img-box {
