--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,9 @@ a {
     color: #fff;
 }
 
-
+.modal-dialog.whtsup-display {
+    margin-top: 150px;
+}
 div#myModal13 {
     background-image: url(../images/voltarbg.png);
     background-position: top center;
@@ -407,7 +409,10 @@ min-height:200px;
 z-index:99;
 }
 
-.stars-mainwrap a{ cursor:pointer; z-index:9999;}
+.stars-mainwrap a{     cursor: pointer;
+    z-index: 9999;
+    color: #000;
+    text-shadow: 0px 4px #fff;}
 
 .stars-mainwrap .starone{
 background-image:url(../images/star1.png);
@@ -1041,7 +1046,7 @@ margin-right:-30px;
   top: 53px;
 }
 .namewraper {
-  font-size: 20px;
+  font-size: 18px;
 }
 	
 .voltr-btn span {  padding-top: 44px;   padding-left: 29px;   font-size: 22px;}
@@ -1088,7 +1093,7 @@ font-size: 30px;
 .whtsupbox .modal-body{ text-align:center;}
 .fav-popup {     font-size: 15px;}
 
-.modal-body .pooptitle {   font-size: 31px;   line-height: normal;}
+.modal-body .pooptitle {   font-size: 19px;   line-height: normal;}
 .donate-now li, .submit-btnbox input[type="submit"] {    height: 50px;   line-height: 32px;}
 .donate-now label,.submit-btnbox input[type="submit"] {   font-size: 13px;	border-radius:0px;}
 
@@ -1231,7 +1236,7 @@ padding-left:20px;
     height: 231px;
 }
 
-.namewraper{ font-size:18px; padding-top:8px;}
+.namewraper{ font-size:15px; padding-top:8px;}
 .namesub{ font-size:13px; margin-top:-115px;}
 .stars-mainwrap .starone{
 width:90px;
@@ -1283,7 +1288,7 @@ margin-right:-30px;
 
 /*Popup Responsive css start here*/
 
-.modal-body .pooptitle {   font-size: 31px;   line-height: normal;}
+.modal-body .pooptitle {   font-size: 20px;   line-height: normal;}
 .donate-now li, .submit-btnbox input[type="submit"] {    height: 50px;   line-height: 32px;}
 .donate-now label,.submit-btnbox input[type="submit"] {   font-size: 13px;	border-radius:0px;}
 
