--- a/css/demo.css
+++ b/css/demo.css
@@ -34,6 +34,65 @@ body .favrouitepage {
 .editaccountms {
     padding-top: 30px;
 }
+li.no-fav {
+    font-size: 24px;
+    width: auto !important;
+}
+
+
+.bankstars.whatsapp-sect .page-heading .head-line {
+    background-image: url(../images/whts-img.png);
+    height: 151px;
+    max-width: 436px;
+    text-align: center;
+}
+
+.whatsapp-sect .head-line span {   padding-left: 58px;    float: left;}
+.innerpage .whatsapp-sect {   padding-top: 50px;}
+.whatsapp-sect label {
+    font-size: 33px;
+    font-weight: 600;
+    border-right: 3px solid #a8f39d;
+    padding-right: 10px;
+    margin-right: 28px;
+    line-height: 31px;
+    margin-bottom: 0px;
+	color:#fff7e8;
+	width:44%;
+	    float: left;
+		    margin-top: 5px;
+}
+
+.whatsapp-sect .volterbox button {
+    height: 97px;
+    max-width: 287px;
+
+}
+.whatsapp-sect ul.bankof-ul {
+    padding-top: 55px;
+}
+.innerpage .whatsapp-sect li:first-child {
+    border-top: none;
+}
+.whts-accept a {
+    margin-left: 20px;
+}
+.innerpage .whatsapp-sect li {
+ font-size: 33px;
+    font-weight: 700;
+    color: #fff;
+	    float: left;
+    width: 100%;
+
+}
+.whatsapp-sect span.whts-accept {
+     float: right; 
+	 padding-left:0px;
+}
+.whatsapp-sect p {
+    float: left;
+    margin: 0px;
+}
 
 
 .editaccountms .custom-file-upload img {
@@ -732,7 +791,7 @@ font-size: 35px;
 }
 
 
-
+.align_centre{ text-align:center;}
 
 
 
@@ -1073,6 +1132,16 @@ header.header {
 
 
 @media only screen and (max-width:664px) {
+	
+	
+.bankstars.whatsapp-sect .page-heading .head-line {    height: 125px;     width: 354px;}
+.innerpage .whatsapp-sect .head-line span {       padding-left: 45px;   padding-top: 0; font-size: 40px; margin-top: 27px;}
+.whatsapp-sect label {    font-size: 24px;    padding-right: 3px;    margin-right: 15px;    width: 44%; border-right:1px solid #a8f39d; line-height: 22px;}
+.innerpage .whatsapp-sect li {    font-size: 24px;}
+ul.bankof-ul span {  float: right;}
+.whts-accept a { margin-left: 15px;  width: 30px; float:left;}
+
+	
 .inputbox{ margin-bottom:15px;}
 .outbox textarea, .inputbox textarea{    min-height: 110px;}
 .left-chat {  width: 20%;}
@@ -1132,6 +1201,7 @@ header.header {
 
 }
  @media only screen and (min-width:600px) and (max-width: 670px) {
+	 
 .l-box.confm input {
     width: 46%;
 }
@@ -1140,6 +1210,13 @@ header.header {
 }
 }
 @media only screen and (max-width:600px) {
+	
+.bankstars.whatsapp-sect .page-heading .head-line {    height: 125px;     width: 354px;}
+.innerpage .whatsapp-sect .head-line span {       padding-left: 45px;   padding-top: 0; font-size: 40px; margin-top: 27px;}
+.whatsapp-sect label {    font-size: 24px;    padding-right: 3px;    margin-right: 15px;    width: 44%; border-right:1px solid #a8f39d; line-height: 22px;}
+.innerpage .whatsapp-sect li {    font-size: 24px;}
+ul.bankof-ul span {  float: right;}
+.whts-accept a { margin-left: 15px;  width: 30px; float:left;}
 
 	
 .rankingbtm-section .rank-title {
@@ -1197,6 +1274,10 @@ header.header {
 }
 
 @media only screen and (max-width:585px) {
+.bankstars.whatsapp-sect .page-heading .head-line {    height: 125px;     width: 354px;}
+.innerpage .whatsapp-sect .page-heading .head-line span {       padding-left: 45px;   padding-top: 0; font-size: 40px; margin-top: 27px;}	
+
+	
   	.bankof-ul h1, .bankof-ul li {   font-size: 25px;   padding: 8px 0px;}
 .bankstars .page-heading .head-line{    max-width: 255px; height: 89px;     padding-top: 0px;}
 .bankstars .page-heading .head-line span {    font-size: 27px;  margin-top: 20px;  line-height: normal;}
@@ -1206,6 +1287,9 @@ header.header {
 .fav-pop-btn {   margin-top: -28px;}
 }
 @media only screen and (max-width:570px) {
+
+
+
 	
 .chatpage .page-heading .head-line span{ font-size:37px; line-height:normal;}	
 .terms-text {   font-size: 17px;   margin: 20px 0px;}
@@ -1290,6 +1374,15 @@ header.header {
 }
 }
  @media only screen and (max-width:480px) {
+.bankstars.whatsapp-sect .page-heading .head-line {    height: 79px;     width: 228px;}
+body .innerpage .whatsapp-sect .page-heading .head-line span{          padding-left: 38px; padding-top: 0; font-size: 24px; margin-top: 20px; }
+.whatsapp-sect label {    font-size: 20px;    padding-right: 3px;    margin-right: 15px;    width: 44%; border-right:1px solid #a8f39d; line-height: 16px;}
+.innerpage .whatsapp-sect li {    font-size: 20px;}
+ul.bankof-ul span {  float: right;}
+.whts-accept a { margin-left: 15px;  width: 26px; float:left;}
+.whatsapp-sect .volterbox button {    height: 63px;    max-width: 180px;     font-size: 25px;}
+
+	 
 .rank-title {
     width: 59%;
 }
@@ -1389,7 +1482,27 @@ font-size: 30px;
 
 
 }
+@media only screen and (min-width:399px) and (max-width: 415px) {
+	
+
+	
+.bankstars.whatsapp-sect .page-heading .head-line {    height: 79px;     width: 228px;}
+body .innerpage .whatsapp-sect .page-heading .head-line span{          padding-left: 38px; padding-top: 0; font-size: 24px; margin-top: 20px; }
+.whatsapp-sect label {    font-size: 19px;    padding-right: 3px;    margin-right: 6px;    width: 47%; border-right:1px solid #a8f39d; line-height: 16px;}
+.innerpage .whatsapp-sect li {    font-size: 19px;}
+ul.bankof-ul span {  float: right;}
+.whts-accept a { margin-left: 10px;  width: 23px; float:left;}
+}
+
+
 @media only screen and (min-width:320px) and (max-width: 399px) {
+.bankstars.whatsapp-sect .page-heading .head-line {    height: 79px;     width: 228px;}
+body .innerpage .whatsapp-sect .page-heading .head-line span{          padding-left: 38px; padding-top: 0; font-size: 24px; margin-top: 20px; }
+.whatsapp-sect label {    font-size: 14px;    padding-right: 3px;    margin-right: 6px;    width: 40%; border-right:1px solid #a8f39d; line-height: 16px;}
+.innerpage .whatsapp-sect li {    font-size: 18px;}
+ul.bankof-ul span {  float: right;}
+.whts-accept a { margin-left: 4px;  width: 20px; float:left;}
+
 		
 	.bankof-ul h1, .bankof-ul li {   font-size: 17px;   padding: 8px 0px;}
 .bankstars .page-heading .head-line{    max-width: 181px; height: 89px;     padding-top: 0px;}
