--- a/css/demo.css
+++ b/css/demo.css
@@ -21,6 +21,10 @@ body {
 	font-family: 'Open Sans', sans-serif;
 	color: #fff;
 }
+.loginpage.reset-confirmation .page-heading .head-line span {
+
+	display:inline-block;
+}
 
 body .rnk-page {
     padding-top: 30px;
@@ -692,7 +696,7 @@ font-size: 35px;
 .ranking-page .innercontent {
     padding-bottom: 0px;
 }
-.r-top-only .ranking-person img{ width:100%; height:100%;     border-radius: 10px;}
+.r-top-only .ranking-person img{ /*width:100%; height:100%;*/     border-radius: 10px;}
 .ranking-person {
 	float:left;
     vertical-align: text-bottom;
@@ -1313,6 +1317,7 @@ ul.bankof-ul span {  float: right;}
 .loginpage .page-heading .head-line span {    font-size: 50px; margin-top: 0px;}
 }
  @media only screen and (min-width:481px) and (max-width: 570px) {
+
 	body .favrouitepage .page-heading .head-line{    padding: 19px 0px 0px 33px;
     max-width: 362px; margin-right:0px;}
 .favrouitepage .page-heading .head-line span {
@@ -1340,8 +1345,16 @@ ul.bankof-ul span {  float: right;}
 .fav-prof li {
 	width: 21.9%;
 }
+	.loginpage.reset-confirmation .page-heading .head-line span {
+    margin-top: 18px;
+	    line-height: normal;
+} 
 }
  @media only screen and (min-width:400px) and (max-width: 480px) {
+	.loginpage.reset-confirmation .page-heading .head-line span {
+
+	    line-height: normal;
+} 
 
 .favrouitepage .page-heading .head-line {
 	padding: 19px 0px 0px 0px;
@@ -1374,6 +1387,11 @@ ul.bankof-ul span {  float: right;}
 }
 }
  @media only screen and (max-width:480px) {
+.reset-confirmation .page-heading .head-line {
+    padding: 19px 0px 0px 0px;
+    height: 106px;
+    width: 304px;
+} 
 .loginpage.reset-confirmation .page-heading .head-line span {
     font-size: 35px;
 } 
