--- a/css/demo.css
+++ b/css/demo.css
@@ -437,7 +437,7 @@ body.favbgmain {
 	float: left;
 	width: 100%;
 	/* border: 2px solid #fff; */
-	height: 80%;
+	/*height: 80%;*/
 }
 .username {
 	float: left;
