--- a/css/demo.css
+++ b/css/demo.css
@@ -437,7 +437,7 @@ body.favbgmain {
 	float: left;
 	width: 100%;
 	/* border: 2px solid #fff; */
-	/*height: 80%;*/
+	height: 80%;
 }
 .username {
 	float: left;
@@ -1324,7 +1324,8 @@ ul.bankof-ul span {  float: right;}
 .ranking-top-div .rank {   font-size: 24px;  margin-top: 0; padding: 0px 5px; line-height: 28px;  text-align: left;}
 .ranking-person {   width: 23%;}
 .rank-title {   font-size: 17px; padding-left: 10px; padding-top: 0px;text-align: left;}
-.rank-title img {   width: 29px;}
+.rank-title img {      width: 24px;
+    vertical-align: top;}
 
 
 
