--- a/css/demo.css
+++ b/css/demo.css
@@ -43,6 +43,41 @@ body .favrouitepage {
 #myModal .modal-dialog {
     margin-top: 10px;
 }
+
+
+.loader {
+       border: 5px solid #f3f3f3;
+    border-top: 5px solid #3498db;
+    border-radius: 49%;
+    width: 60px;
+    height: 60px;
+    animation: spin 2s linear infinite;
+    position: absolute;
+    left: 48%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    -moz-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    -o-transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%,-50%);
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+.loadermain {
+    float: left;
+    width: 100%;
+    position: fixed;
+    background: rgba(0,0,0,0.7);
+    height: 100%;
+	display:none;
+    top: 0;
+    text-align: center;
+}
+
+
 .editaccountms {
     padding-top: 30px;
 }
@@ -1293,6 +1328,9 @@ ul.bankof-ul span {  float: right;}
 }
 
 @media only screen and (max-width:585px) {
+.loader {
+    left: 44%;
+}	
 .bankstars.whatsapp-sect .page-heading .head-line {    height: 125px;     width: 354px;}
 .innerpage .whatsapp-sect .page-heading .head-line span {       padding-left: 45px;   padding-top: 0; font-size: 40px; margin-top: 27px;}	
 
